<resources>
    <string name="app_name">LM Price Tracker</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="addItem">Adds Item</string>

    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>

    <!-- NAV -->
    <string name="menu_home">Dashboard</string>
    <string name="menu_upload">My Products</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_category">Categories</string>
    <string name="menu_dtisrp">DTI SRP Pricelist</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log Out</string>
    <!-- ADMIN NAV -->
    <string name="menu_pending">Pending Users</string>
    <string name="menu_active">Active Users</string>

    <!-- LOGIN PAGE -->
    <string name="customer_login">Login</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="log_in_button">login</string>
    <string name="create_acct_btn">create account</string>
    <string name="guest_btn">continue as guest</string>

    <!-- ACCOUNT CREATION -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="province">Province</string>
    <string name="municipality">Municipality</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="personal_information">Personal Information</string>
    <string name="address">Market Address</string>
    <string name="contact_information">Contact Information</string>
    <string name="register_btn">register</string>
    <string name="log_in_here">Log In here</string>
    <string name="has_account">Already have an account?</string>

    <!-- CATEGORIES -->
    <string name="Username">Username</string>
    <string name="title_activity_maps">Map</string>

    <!-- MAIN CATEGORY-->
    <!-- SUB CATEGORY-->
    <!-- FOOD-->
    <!-- HOUSEHOLD ITEMS-->
    <!-- CRAFTED GOODS-->

    <!-- Strings used for fragments for navigation -->

</resources>