<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_backg"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="6dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/noSpSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/logo" />
            <!--
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@color/main_color"
                android:gravity="center"
                android:text="@string/customer_login"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
                -->

            <EditText
                android:id="@+id/login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/rectangle"
                android:drawableEnd="@drawable/ic_login"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle"
                android:drawableEnd="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_email" />

            <TextView
                android:id="@+id/tv_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:clickable="false"
                android:text="Forgot your password?"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_password" />

            <Button
                android:id="@+id/btn_regApply"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:backgroundTint="@color/main_color"
                android:text="@string/log_in_button"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword" />

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/white"
                android:text="Create Account"
                android:textAllCaps="false"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_regApply" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/noSpSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color_dark"
            android:padding="10dp"
            android:text="Access the NO SMARTPHONE or NO INTERNET customer support by dialing 09876543211." />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>